syntax = "proto3";

option csharp_namespace = "Persistify.Grpc.Protos";

package operations;

import "Protos/shared.proto";

message IndexRequest {
  string type = 1;
  string data = 2;
  optional int64 id = 3;
}

message IndexResponse {
  int64 id = 1;
  shared.ResponseMetadata metadata = 2;
}

message SearchRequest {
  string type = 1;
  string query = 2;
  int32 limit = 3;
  int32 offset = 4;
}

message SearchResponse {
  repeated shared.Document documents = 1;
  shared.ResponseMetadata metadata = 2;
}

message DeleteRequest {
  string type = 1;
  int64 id = 2;
}

message DeleteResponse {
  shared.ResponseMetadata metadata = 1;
}

service Operations {
  rpc Index(IndexRequest) returns (IndexResponse);
  rpc Search(SearchRequest) returns (SearchResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}